--- a/mustdo/ansible-deploy.org
+++ b/mustdo/ansible-deploy.org
@@ -1,19 +1,22 @@
 * CA RA (deployment automation) vs Ansible (confguration management)
 
-|                             | CA Release Automation                                                                                                                                                | Ansible Deployment                                                                                     |
-| Parameter Passing           | The Parameters are set in JIRA, then passed to Jenkins, Then passed to shell script and so on                                                                        | Directly passed from group_vars or host_vars yaml files                                                |
-| Hand off of control         | Multiple hand offs                                                                                                                                                   | Centralized at the Jenkins/Ansible controller                                                          |
-| Logging                     | Decentralized at multiple places                                                                                                                                     | Centralized at Jenkins                                                                                 |
-| Reporting                   | Logs and status are at multiple places, difficult to implement                                                                                                       | Full deployment Logs emailed to stakeholders                                                           |
-| Security                    | Integrated to Reg1 and CyberArk, Jenkins credentials                                                                                                                 | Integrated to Reg1, CyberArk and Vault                                                                 |
-| Release model               | Multiple locations for code, CA RA deployments, CA RA Configurations (bitbucket) etc.                                                                                | Centralized to Bitbucket and Vault                                                                     |
-| Traceability                | Disintregrated and decentralized                                                                                                                                     | Co-located at the source control sytem (bitbucket)                                                     |
-| Parallelism                 | Depends upon CA RA Master and Agents assembly                                                                                                                        | Depends upon number of agents that can be spawn to run Ansible (dynamic)                               |
-| Configuration management    | Decentralized                                                                                                                                                        | Centralized                                                                                            |
-| Ease of Understanding       | Complex Parameterizing mechanism and shell scripting                                                                                                                 | YAML based DSL, well documented industry standard                                                      |
-| Runtime types               | Multiple, Jenkinsfile(s), CA RA Deployments, shell scripts, custom tools                                                                                             | Jenkinsfile, Ansible playbooks, Python                                                                 |
-| Licensing                   | CA                                                                                                                                                                   | Open Source                                                                                            |
-| Maintenance                 | Multiple repositories & stakeholders. App team releases code. ITSS maintains CA RA deployments, JIRA, parameters etc.  Debugging involves multiple team interactions | One time setup, ITSS Release team to trigger, Fully traceable in from source                           |
-| Externalized Configurations | NA. Artifacts are deployed as scripts and file packages.                                                                                                             | Configurations are externalized to secure configuration store - Vault                                  |
-| Multiple files deployment   | To maintain traceability - versions must be tracked via JIRA and CA RA parameter passing mechanism.                                                                  | Multiple files can be deployed in single release. Traceability is mainained in Version control system. |
-|                             |                                                                                                                                                                      |                                                                                                        |
+|                              | CA Release Automation                                                                                                                                                | Ansible Deployment                                                                                             |
+| Parameter Passing            | The Parameters are set in JIRA, then passed to Jenkins, Then passed to shell script and so on                                                                        | Directly passed from group_vars or host_vars yaml files                                                        |
+| Hand off of control          | Multiple hand offs                                                                                                                                                   | Centralized at the Jenkins/Ansible controller                                                                  |
+| Logging                      | Decentralized at multiple places                                                                                                                                     | Centralized at Jenkins                                                                                         |
+| Reporting                    | Logs and status are at multiple places, difficult to implement                                                                                                       | Full deployment Logs emailed to stakeholders                                                                   |
+| Security                     | Integrated to Reg1 and CyberArk, Jenkins credentials                                                                                                                 | Integrated to Reg1, CyberArk and Vault                                                                         |
+| Release model                | Multiple locations for code, CA RA deployments, CA RA Configurations (bitbucket) etc.                                                                                | Centralized to Bitbucket and Vault                                                                             |
+| Traceability                 | Disintregrated and decentralized                                                                                                                                     | Co-located at the source control sytem (bitbucket)                                                             |
+| Parallelism                  | Depends upon CA RA Master and Agents assembly                                                                                                                        | Depends upon number of agents that can be spawn to run Ansible (dynamic)                                       |
+| Configuration management     | Decentralized                                                                                                                                                        | Centralized                                                                                                    |
+| Ease of Understanding        | Complex Parameterizing mechanism and shell scripting                                                                                                                 | YAML based DSL, well documented industry standard                                                              |
+| Runtime types                | Multiple, Jenkinsfile(s), CA RA Deployments, shell scripts, custom tools                                                                                             | Jenkinsfile, Ansible playbooks, Python                                                                         |
+| Licensing                    | CA                                                                                                                                                                   | Open Source                                                                                                    |
+| Maintenance                  | Multiple repositories & stakeholders. App team releases code. ITSS maintains CA RA deployments, JIRA, parameters etc.  Debugging involves multiple team interactions | One time setup, ITSS Release team to trigger, Fully traceable in from source                                   |
+| Externalized Configurations  | NA. Artifacts are deployed as scripts and file packages.                                                                                                             | Configurations are externalized to secure configuration store - Vault                                          |
+| Multiple files deployment    | To maintain traceability - versions must be tracked via JIRA and CA RA parameter passing mechanism.                                                                  | Multiple files can be deployed in single release. Traceability is mainained in Version control system.         |
+| Credentials/Key Rotation     | Manual                                                                                                                                                               | Externalized through Secure storage Vault                                                                      |
+| Token based Deployments      | NA. Propretiery workflow.                                                                                                                                            | Yes, through Vault. Tokens can be expired after each deployment.                                               |
+| Cross Technology Integration | Dependent upon the product features. Limited to scope of product.                                                                                                    | Vault has known integration to Jenkins, Spring Boot/Spring Config, Ansible, Kubernetes, Openshift, Docker etc. |
+|                              |                                                                                                                                                                      |                                                                                                                |
