--- a/aws/aws.org
+++ b/aws/aws.org
@@ -564,3 +564,67 @@ Users  ->
   - static code analysis
   - Penetration testing
   - risk assesment reviews
+*** AWS EMR
+
+Launch the cluster with appropriate permissions.
+
+connect using the key
+
+#+BEGIN_SRC 
+
+#+END_SRC
+
+Install the foxy proxy standard edition from chrome
+https://chrome.google.com/webstore/search/foxy%20proxy
+
+
+create following xml file
+
+#+BEGIN_SRC 
+<?xml version="1.0" encoding="UTF-8"?>
+<foxyproxy>
+    <proxies>
+        <proxy name="emr-socks-proxy" id="2322596116" notes="" fromSubscription="false" enabled="true" mode="manual" selectedTabIndex="2" lastresort="false" animatedIcons="true" includeInCycle="true" color="#0055E5" proxyDNS="true" noInternalIPs="false" autoconfMode="pac" clearCacheBeforeUse="false" disableCache="false" clearCookiesBeforeUse="false" rejectCookies="false">
+            <matches>
+                <match enabled="true" name="*ec2*.amazonaws.com*" pattern="*ec2*.amazonaws.com*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+                <match enabled="true" name="*ec2*.compute*" pattern="*ec2*.compute*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+                <match enabled="true" name="10.*" pattern="http://10.*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+                <match enabled="true" name="*10*.amazonaws.com*" pattern="*10*.amazonaws.com*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+                <match enabled="true" name="*10*.compute*" pattern="*10*.compute*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+                <match enabled="true" name="*.compute.internal*" pattern="*.compute.internal*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+                <match enabled="true" name="*.ec2.internal*" pattern="*.ec2.internal*" isRegEx="false" isBlackList="false" isMultiLine="false" caseSensitive="false" fromSubscription="false" />
+            </matches>
+            <manualconf host="localhost" port="8157" socksversion="5" isSocks="true" username="" password="" domain="" />
+        </proxy>
+    </proxies>
+</foxyproxy>
+#+END_SRC
+
+Add the above xml as setings in foxy proxy in chrome.
+
+Then go to following urls for access:
+
+| Name of interface    | URI                                    |
+| YARN ResourceManager | http://master-public-dns-name:8088/    |
+| YARN NodeManager     | http://coretask-public-dns-name:8042/  |
+| Hadoop HDFS NameNode | http://master-public-dns-name:50070/   |
+| Hadoop HDFS DataNode | http://coretask-public-dns-name:50075/ |
+| Spark HistoryServer  | http://master-public-dns-name:18080/   |
+| Zeppelin             | http://master-public-dns-name:8890/    |
+| Hue                  | http://master-public-dns-name:8888/    |
+| Ganglia              | http://master-public-dns-name/ganglia/ |
+| HBase                | http://master-public-dns-name:16010/   |
+| JupyterHub           | http://master-public-dns-name:9443/    |
+|                      |                                        |
+*** Tips and tricks
+**** Allow ec2 to access s3 buckets
+
+- Create a role in IAM
+In the role, while creating policies choose EC2
+In the policies select s3 readonly/s3full access
+
+- Go to EC2 dashboard
+  - Right click on instance
+  - Instance settings
+  - Attach/Remove IAM role
+  - Choose the above IAM Role
