--- a/ansible.org
+++ b/ansible.org
@@ -670,6 +670,32 @@ permission denied for relation pg_authid
 #+BEGIN_SRC 
 path: "{{(download_location+'/'+ item) | dirname}}"
 #+END_SRC
+
+** Create systemd service
+#+BEGIN_SRC 
+---
+- name: "Check if use systemd"
+  set_fact: use_system_d={{(ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('8', '>=')) or (ansible_distribution in ['RedHat','CentOS'] and ansible_distribution_version | version_compare('7', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('15', '>=')) }}
+
+- name: "Ensure systemd system directory is present (for Ubuntu)"
+  file:
+    path: "{{ sysd_user_services_folder }}"
+    state: directory
+    owner: root
+    group: root
+
+- name: "Create systemd service file"
+  template:
+    src: app.service.j2
+    dest: "{{ sysd_script }}"
+    mode: 0644
+    owner: "{{ springboot_user }}"
+    group: "{{ springboot_group }}"
+  when: use_system_d
+
+  notify:
+    - "Restart application"
+#+END_SRC
 * Quick ref
  - Inventory and Config
    - features
